--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,11 @@
     <string name="incorrect_toast">Wrong!</string>
     <string name="correct_toast">You got it!</string>
 
-    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.</string>
-    <string name="question_2">A slug\'s blood is green.</string>
+    <string name="question_1">Sachin Tendulkar has not played a single International T20 match for India.</string>
+    <string name="question_2">There are 4 sessions of the Parliament each year: Spring, Summer, Autumn and Winter..</string>
     <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
     <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
-    <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
+    <string name="question_5">A male rhinocero\'s is known as bull.</string>
     <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
     <string name="question_7">It is illegal to pee in the Ocean in Portugal.</string>
     <string name="question_8">You can lead a cow down stairs but not up stairs.</string>
